tests/expectations/execution/external_struct.out
Error while running execution tests:
Error [EPAR0370005]: expected '}', '@', 'record', 'constructor', 'fn', 'mapping', 'storage' -- found 'struct'
    --> compiler-test:15:5
     |
  15 |     struct Foo {
     |     ^^^^^^


Errors:
